--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
+    <title>MA - Business Group | Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer |Mandela Temesgen</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
-                    <span>mandelatemesgen@gmail.com</span>
+                    <span>mabusinessgroup2010@gmail.com</span>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -88,7 +88,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-5">
                                     <a href="seed-interprise" class="text-decoration-underline">
-                                        <h5>MT Seed Enterprises</h5>
+                                        <h5>Seed Enterprises</h5>
                                     </a>
                                     <ul class="list-unstyled">
                                         <li>Seed multiplication and distribution</li>
@@ -149,7 +149,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown"> Seed Enterprises</h1>
                                     <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                 <div class="col-lg-3 col-md-5  shadow-sm wow fadeInUp d-flex flex-column align-items-center text-center py-4" data-wow-delay="0.1s">
                     <img class="img-fluid " src="img/icon/seed-distribution.png" alt="Icon">
                     <div style="height:100px">
-                        <h4 class="mb-3 mt-4">MT Seed Enterprises</h4>  
+                        <h4 class="mb-3 mt-4"> Seed Enterprises</h4>  
                     </div>
                     <div style="height:180px">
                     <p class="mb-3">
@@ -491,7 +491,7 @@
                         <div class="p-4">
                             <h5 class="mb-3">Collaborative Crop Production: Partnering for Success</h5>
                             <p>
-                                MT Crop Production, we believe in the power of collaboration. Our crop production services extend beyond our own fields;
+                                MA Crop Production, we believe in the power of collaboration. Our crop production services extend beyond our own fields;
                                  we actively partner with local farmers to improve yields and quality.
                             </p>
                             <a class="text-uppercase" href="blog3">Read More <i class="bi bi-arrow-right"></i></a>
@@ -750,7 +750,7 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
                     </p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>mabusinessgroup2010@gmail.com </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -760,7 +760,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Divisions</h4>
-                    <a class="btn btn-link" href="seed-interprise">MT Seed Enterprises</a>
+                    <a class="btn btn-link" href="seed-interprise">Seed Enterprises</a>
                     <a class="btn btn-link" href="crop-production">Crop Production Development</a>
                     <a class="btn btn-link" href="agro-input">Agro-Input Dealer</a>
                     <a class="btn btn-link" href="mechanization">Mechanization Services Center</a>
@@ -785,7 +785,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">mt-business-group</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#">MA-business-group</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
