--- a/mechanization.html
+++ b/mechanization.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
+    <title>MA - Business Group |Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
     <meta content="
@@ -52,7 +52,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
-                    <span>mandelatemesgen@gmail.com</span>
+                    <span>mabusinessgroup2010@gmail.com</span>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -86,7 +86,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-5">
                                     <a href="seed-interprise" class="text-decoration-underline">
-                                        <h5>MT Seed Enterprises</h5>
+                                        <h5>Seed Enterprises</h5>
                                     </a>
                                     <ul class="list-unstyled">
                                         <li>Seed multiplication and distribution</li>
@@ -147,7 +147,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Seed Enterprises</h1>
                                     <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
@@ -369,7 +369,7 @@
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
                 </p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>mabusinessgroup2010@gmail.com </p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -379,7 +379,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <h4 class="text-white mb-4">Divisions</h4>
-                <a class="btn btn-link" href="seed-interprise">MT Seed Enterprises</a>
+                <a class="btn btn-link" href="seed-interprise">Seed Enterprises</a>
                 <a class="btn btn-link" href="crop-production">Crop Production Development</a>
                 <a class="btn btn-link" href="agro-input">Agro-Input Dealer</a>
                 <a class="btn btn-link" href="mechanization">Mechanization Services Center</a>
@@ -404,7 +404,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a class="border-bottom" href="#">mt-business-group</a>, All Right Reserved.
+                &copy; <a class="border-bottom" href="#">MA-business-group</a>, All Right Reserved.
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
