--- a/seed-interprise.html
+++ b/seed-interprise.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MA - Business Group |MT Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
+    <title>MA - Business Group |Seed Enterprise |Mechanization Service | Crop Production | Agro Input Dealer</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="keywords" content="mechanization services, seed enterprise ,crop production development ,agro input dealer,agriculture,farmer productivity,tructor,business group,Mandela Temesgen">
     <meta content="
-    At MT Seed Enterprises, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place." name="description">
+    At Seed Enterprise, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place." name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -51,7 +51,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <span class="far fa-envelope me-2"></span>
-                    <span>mandelatemesgen@gmail.com</span>
+                    <span>mabusinessgroup2010@gmail.com</span>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -85,7 +85,7 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-5">
                                     <a href="seed-interprise" class="text-decoration-underline">
-                                        <h5>MT Seed Enterprises</h5>
+                                        <h5>Seed Enterprises</h5>
                                     </a>
                                     <ul class="list-unstyled">
                                         <li>Seed multiplication and distribution</li>
@@ -146,7 +146,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">MT Seed Enterprises</h1>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Seed Enterprises</h1>
                                     <a href="seed-interprise" class="btn btn-primary py-sm-3 px-sm-4">Explore More</a>
                                 </div>
                             </div>
@@ -226,9 +226,9 @@
                 <div class="col-lg-17 wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-white shadow d-flex align-items-center justify-content-center h-200 px-5" style="min-height: 200px;">
                         <div class="text-center d-flex flex-column p-4">
-                            <h2>MT Seed Enterprises</h2>
+                            <h2>Seed Enterprises</h2>
                             <span>
-                                At MT Seed Enterprises, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place. Our goal is to improve crop yields and resilience by offering high-quality seeds that are tailored to the needs of farmers in different regions. Whether you're a smallholder or a large-scale grower, MT Seed Enterprises is your trusted partner in seed supply.
+                                At  Seed Enterprises, we specialize in seed multiplication to solve the longstanding issue of access to quality seeds for Ethiopian farmers. By working closely with research institutions and local agricultural offices, we ensure that the right seeds are available at the right time and place. Our goal is to improve crop yields and resilience by offering high-quality seeds that are tailored to the needs of farmers in different regions. Whether you're a smallholder or a large-scale grower, Seed Enterprises is your trusted partner in seed supply.
                             </span>
                             
                         </div>
@@ -641,7 +641,7 @@
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
                 </p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>mandelatemesgen@gmail.com </p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>mabusinessgroup2010@gmail.com </p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -651,7 +651,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <h4 class="text-white mb-4">Divisions</h4>
-                <a class="btn btn-link" href="seed-interprise">MT Seed Enterprises</a>
+                <a class="btn btn-link" href="seed-interprise">Seed Enterprises</a>
                 <a class="btn btn-link" href="crop-production">Crop Production Development</a>
                 <a class="btn btn-link" href="agro-input">Agro-Input Dealer</a>
                 <a class="btn btn-link" href="mechanization">Mechanization Services Center</a>
@@ -676,7 +676,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a class="border-bottom" href="#">mt-business-group</a>, All Right Reserved.
+                &copy; <a class="border-bottom" href="#">MA-business-group</a>, All Right Reserved.
             </div>
             <div class="col-md-6 text-center text-md-end">
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
