--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                     <span>Follow Us:</span>
                     <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-link text-light" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href="https://www.linkedin.com/company/ma-business-group/ "><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-link text-light" href="https://www.linkedin.com/in/ma-business-group-31b993328/ "><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-link text-light" href="https://www.youtube.com/channel/UCgFAWadgo16U1eGlSIl80jg"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://x.com/MABusiness83189"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.youtube.com/channel/UCgFAWadgo16U1eGlSIl80jg"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href=" https://www.linkedin.com/company/ma-business-group/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href=" https://www.linkedin.com/in/ma-business-group-31b993328/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -289,6 +289,8 @@
                 formJson[key] = value;
             });
             try {
+
+                console.log("Requesting")
                 // Send the request using fetch
                 fetch('https://nodemailer-t56o.onrender.com/send-email', {
                     method: 'POST',
