--- a/about.html
+++ b/about.html
@@ -228,6 +228,8 @@
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <h4 class="text-white mb-4">Our Office</h4>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Hibir bldg.3rd floor, Gurd shola, AddisAbaba</p>
+                <h6 class="mb-2 text-light">Regional Office</h6>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                 <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
                 </p>
