--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
                     <div class="position-relative rounded overflow-hidden h-100">
                         
                         <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3893.6088326820486!2d37.467059573664905!3d12.608011922748277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164327d5bd20f365%3A0xe39869932a279b76!2sFasil%20Ghebbi!5e0!3m2!1sam!2set!4v1724831206092!5m2!1sam!2set"
+                        src="https://www.google.com/maps/embed?pb=!1m20!1m8!1m3!1d985.1212592318111!2d38.81497421954714!3d9.019440449440099!3m2!1i1024!2i768!4f13.1!4m9!3e0!4m3!3m2!1d9.019362!2d38.8156119!4m3!3m2!1d9.0193203!2d38.8156155!5e0!3m2!1sen!2set!4v1726432627324!5m2!1sen!2set"
                         frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
                     </div>
@@ -213,6 +213,8 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Hibir bldg.3rd floor, Gurd shola, AddisAbaba</p>
+                    <h6 class="mb-2 text-light">Regional Office</h6>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Fasil Sub-City, Gonder Woreda, BLIP, Amhara Region</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+2519 248 018 18
                     </p>
